src/snapshots/jfrview__export__tests__parse_without_panic_nonnative@profiler-multichunk.jfr.snap
---
source: src/export.rs
description: "non-native, profiler-multichunk.jfr"
input_file: test-data/profiler-multichunk.jfr
snapshot_kind: text
---
:/usr/lib/aarch64-linux-gnu/libc.so.6: (5706)
| :/usr/lib/aarch64-linux-gnu/libc.so.6: (5706)
| | libjvm.so:thread_native_entry: (5706)
| | | libjvm.so:Thread::call_run: (5706)
| | | | libjvm.so:ConcurrentGCThread::run: (900)
| | | | | libjvm.so:G1ConcurrentMarkThread::run_service: (300)
| | | | | | libjvm.so:Monitor::wait: (300)
| | | | | | | libjvm.so:Monitor::IWait: (300)
| | | | | | | | libjvm.so:os::PlatformEvent::park: (300)
| | | | | | | | | libc.so.6:pthread_cond_wait: (300)
| | | | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (300)
| | | | | libjvm.so:G1ConcurrentRefineThread::run_service: (300)
| | | | | | libjvm.so:Monitor::wait: (300)
| | | | | | | libjvm.so:Monitor::IWait: (300)
| | | | | | | | libjvm.so:os::PlatformEvent::park: (300)
| | | | | | | | | libc.so.6:pthread_cond_wait: (300)
| | | | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (300)
| | | | | libjvm.so:G1YoungRemSetSamplingThread::run_service: (300)
| | | | | | libjvm.so:Monitor::wait: (300)
| | | | | | | libjvm.so:Monitor::IWait: (300)
| | | | | | | | libjvm.so:os::PlatformEvent::park: (300)
| | | | | | | | | libc.so.6:pthread_cond_timedwait: (300)
| | | | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (300)
| | | | libjvm.so:JavaThread::thread_main_inner: (2405)
| | | | | libjvm.so:ServiceThread::service_thread_entry: (301)
| | | | | | libjvm.so:Monitor::wait: (301)
| | | | | | | libjvm.so:Monitor::IWait: (301)
| | | | | | | | libjvm.so:os::PlatformEvent::park: (301)
| | | | | | | | | libc.so.6:pthread_cond_wait: (301)
| | | | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (301)
| | | | | libjvm.so:CompileBroker::compiler_thread_loop: (602)
| | | | | | libjvm.so:CompileQueue::get: (602)
| | | | | | | libjvm.so:Monitor::wait: (602)
| | | | | | | | libjvm.so:Monitor::IWait: (602)
| | | | | | | | | libjvm.so:os::PlatformEvent::park: (602)
| | | | | | | | | | libc.so.6:pthread_cond_timedwait: (602)
| | | | | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (602)
| | | | | libjvm.so:attach_listener_thread_entry: (300)
| | | | | | libjvm.so:AttachListener::dequeue: (300)
| | | | | | | libjvm.so:LinuxAttachListener::dequeue: (300)
| | | | | | | | libc.so.6:accept: (300)
| | | | | libjvm.so:signal_thread_entry: (301)
| | | | | | libjvm.so:os::signal_wait: (301)
| | | | | | | libjvm.so:PosixSemaphore::wait: (301)
| | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (301)
| | | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (301)
| | | | | libjvm.so:recorderthread_entry: (300)
| | | | | | libjvm.so:Monitor::wait: (300)
| | | | | | | libjvm.so:Monitor::IWait: (300)
| | | | | | | | libjvm.so:os::PlatformEvent::park: (300)
| | | | | | | | | libc.so.6:pthread_cond_wait: (300)
| | | | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (300)
| | | | | libjvm.so:JvmtiAgentThread::call_start_function: (300)
| | | | | | libasyncProfiler.so:Profiler::timerLoop: (300)
| | | | | | | libc.so.6:pthread_cond_timedwait: (300)
| | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (300)
| | | | | libjvm.so:NMethodSweeper::sweeper_loop: (301)
| | | | | | libjvm.so:Monitor::wait: (301)
| | | | | | | libjvm.so:Monitor::IWait: (301)
| | | | | | | | libjvm.so:os::PlatformEvent::park: (301)
| | | | | | | | | libc.so.6:pthread_cond_timedwait: (301)
| | | | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (301)
| | | | libjvm.so:GangWorker::loop: (1500)
| | | | | libjvm.so:SemaphoreGangTaskDispatcher::worker_wait_for_task: (1500)
| | | | | | libjvm.so:PosixSemaphore::wait: (1500)
| | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (1500)
| | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (1500)
| | | | libjvm.so:VMThread::run: (300)
| | | | | libjvm.so:VMThread::loop: (300)
| | | | | | libjvm.so:Monitor::wait: (300)
| | | | | | | libjvm.so:Monitor::IWait: (300)
| | | | | | | | libjvm.so:os::PlatformEvent::park: (300)
| | | | | | | | | libc.so.6:pthread_cond_timedwait: (300)
| | | | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (300)
| | | | libjvm.so:WatcherThread::run: (301)
| | | | | libjvm.so:WatcherThread::sleep: (301)
| | | | | | libjvm.so:Monitor::wait: (301)
| | | | | | | libjvm.so:Monitor::IWait: (301)
| | | | | | | | libjvm.so:os::PlatformEvent::park: (301)
| | | | | | | | | libc.so.6:pthread_cond_timedwait: (301)
| | | | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (301)
| | | | libjvm.so:JfrThreadSampler::run: (300)
| | | | | libjvm.so:PosixSemaphore::wait: (300)
| | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (300)
| | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (300)
java.lang.Thread:run: (1379)
| java.util.concurrent.ThreadPoolExecutor$Worker:run: (1079)
| | java.util.concurrent.ThreadPoolExecutor:runWorker: (1079)
| | | Example$$Lambda$5.575335780:run: (599)
| | | | Example:lambda$main$3: (599)
| | | | | Example:sleep: (599)
| | | | | | java.lang.Thread:yield: (599)
| | | | | | | libc.so.6:__sched_yield: (598)
| | | | | | | libjvm.so:sched_yield@plt: (1)
| | | Example$$Lambda$4.1500056228:run: (480)
| | | | Example:lambda$main$2: (480)
| | | | | Example$Writer:println: (60)
| | | | | | sun.nio.ch.FileChannelImpl:force: (60)
| | | | | | | sun.nio.ch.FileDispatcherImpl:force: (60)
| | | | | | | | sun.nio.ch.FileDispatcherImpl:force0: (60)
| | | | | | | | | libnio.so:Java_sun_nio_ch_FileDispatcherImpl_force0: (60)
| | | | | | | | | | libc.so.6:fsync: (60)
| | | | | java.util.concurrent.LinkedBlockingQueue:poll: (420)
| | | | | | java.util.concurrent.locks.AbstractQueuedSynchronizer$ConditionObject:awaitNanos: (420)
| | | | | | | java.util.concurrent.locks.LockSupport:parkNanos: (420)
| | | | | | | | jdk.internal.misc.Unsafe:park: (420)
| | | | | | | | | libjvm.so:Unsafe_Park: (420)
| | | | | | | | | | libjvm.so:Parker::park: (420)
| | | | | | | | | | | libc.so.6:pthread_cond_timedwait: (420)
| | | | | | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (420)
| jdk.jfr.internal.PlatformRecorder$$Lambda$55.205465701:run: (300)
| | jdk.jfr.internal.PlatformRecorder:lambda$startDiskMonitor$1: (300)
| | | jdk.jfr.internal.PlatformRecorder:periodicTask: (300)
| | | | jdk.jfr.internal.PlatformRecorder:takeNap: (300)
| | | | | java.lang.Object:wait: (300)
| | | | | | libjvm.so:JVM_MonitorWait: (300)
| | | | | | | libjvm.so:ObjectSynchronizer::wait: (300)
| | | | | | | | libjvm.so:ObjectMonitor::wait: (300)
| | | | | | | | | libjvm.so:os::PlatformEvent::park: (300)
| | | | | | | | | | libc.so.6:pthread_cond_timedwait: (299)
| | | | | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (299)
| | | | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (1)
:unknown_Java: (1)
| libc.so.6:clock_gettime: (1)
java.lang.ref.Finalizer$FinalizerThread:run: (301)
| java.lang.ref.ReferenceQueue:remove: (301)
| | java.lang.ref.ReferenceQueue:remove: (301)
| | | java.lang.Object:wait: (301)
| | | | libjvm.so:JVM_MonitorWait: (301)
| | | | | libjvm.so:ObjectSynchronizer::wait: (301)
| | | | | | libjvm.so:ObjectMonitor::wait: (301)
| | | | | | | libjvm.so:os::PlatformEvent::park: (301)
| | | | | | | | libc.so.6:pthread_cond_wait: (301)
| | | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (301)
Example:main: (300)
| java.util.concurrent.ThreadPoolExecutor:awaitTermination: (300)
| | java.util.concurrent.locks.AbstractQueuedSynchronizer$ConditionObject:awaitNanos: (300)
| | | java.util.concurrent.locks.LockSupport:parkNanos: (300)
| | | | jdk.internal.misc.Unsafe:park: (300)
| | | | | libjvm.so:Unsafe_Park: (300)
| | | | | | libjvm.so:Parker::park: (300)
| | | | | | | libc.so.6:pthread_cond_timedwait: (300)
| | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (300)
jdk.internal.misc.InnocuousThread:run: (300)
| java.lang.Thread:run: (300)
| | jdk.internal.ref.CleanerImpl:run: (300)
| | | java.lang.ref.ReferenceQueue:remove: (300)
| | | | java.lang.Object:wait: (300)
| | | | | libjvm.so:JVM_MonitorWait: (300)
| | | | | | libjvm.so:ObjectSynchronizer::wait: (300)
| | | | | | | libjvm.so:ObjectMonitor::wait: (300)
| | | | | | | | libjvm.so:os::PlatformEvent::park: (300)
| | | | | | | | | libc.so.6:pthread_cond_timedwait: (300)
| | | | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (300)
:unknown: (300)
| java:_start: (300)
| | libc.so.6:__libc_start_main: (300)
| | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (300)
| | | | java:main: (300)
| | | | | libjli.so:JLI_Launch: (300)
| | | | | | libjli.so:ContinueInNewThread: (300)
| | | | | | | libjli.so:CallJavaMainInNewThread: (300)
| | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (300)
| | | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (300)
java.lang.ref.Reference$ReferenceHandler:run: (301)
| java.lang.ref.Reference:processPendingReferences: (301)
| | java.lang.ref.Reference:waitForReferencePendingList: (301)
| | | libjvm.so:JVM_WaitForReferencePendingList: (301)
| | | | libjvm.so:Monitor::wait: (301)
| | | | | libjvm.so:Monitor::IWait: (301)
| | | | | | libjvm.so:os::PlatformEvent::park: (301)
| | | | | | | libc.so.6:pthread_cond_wait: (301)
| | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (301)
java.util.TimerThread:run: (300)
| java.util.TimerThread:mainLoop: (300)
| | java.lang.Object:wait: (300)
| | | java.lang.Object:wait: (300)
| | | | libjvm.so:JVM_MonitorWait: (300)
| | | | | libjvm.so:ObjectSynchronizer::wait: (300)
| | | | | | libjvm.so:ObjectMonitor::wait: (300)
| | | | | | | libjvm.so:os::PlatformEvent::park: (300)
| | | | | | | | libc.so.6:pthread_cond_wait: (300)
| | | | | | | | | :/usr/lib/aarch64-linux-gnu/libc.so.6: (300)
