src/snapshots/jfrview__export__tests__parse_without_panic_nonnative@recording-2_1.jfr.snap
---
source: src/export.rs
description: "non-native, recording-2_1.jfr"
input_file: test-data/recording-2_1.jfr
snapshot_kind: text
---

