src/snapshots/jfrview__export__tests__parse_without_panic_nonnative@recording.jfr.snap
---
source: src/export.rs
description: "non-native, recording.jfr"
input_file: test-data/recording.jfr
snapshot_kind: text
---
java.lang.Thread:run: (3)
| jdk.jfr.internal.PlatformRecorder$$Lambda$55.205465701:run: (3)
| | jdk.jfr.internal.PlatformRecorder:lambda$startDiskMonitor$1: (3)
| | | jdk.jfr.internal.PlatformRecorder:periodicTask: (3)
| | | | jdk.jfr.internal.PlatformRecorder:takeNap: (3)
