src/snapshots/jfrview__export__tests__with-native, no-threads@recording.jfr.snap
---
source: src/export.rs
input_file: test-data/recording.jfr
---
java.lang.Thread:run: (252)
| java.util.concurrent.ThreadPoolExecutor$Worker:run: (249)
| | java.util.concurrent.ThreadPoolExecutor:runWorker: (249)
| | | Example$$Lambda$4.1500056228:run: (239)
| | | | Example:lambda$main$2: (239)
| | | | | Example$Writer:println: (239)
| | | | | | sun.nio.ch.FileChannelImpl:force: (239)
| | | | | | | sun.nio.ch.FileDispatcherImpl:force: (239)
| | | | | | | | sun.nio.ch.FileDispatcherImpl:force0: (239)
| | | Example$$Lambda$5.575335780:run: (10)
| | | | Example:lambda$main$3: (10)
| | | | | Example:sleep: (10)
| | | | | | java.lang.Thread:yield: (10)
| jdk.jfr.internal.PlatformRecorder$$Lambda$55.205465701:run: (3)
| | jdk.jfr.internal.PlatformRecorder:lambda$startDiskMonitor$1: (3)
| | | jdk.jfr.internal.PlatformRecorder:periodicTask: (3)
| | | | jdk.jfr.internal.PlatformRecorder:takeNap: (3)
